Update: 월별조회시 개수, 평균, 최고점 볼 수 있도록 기능 추가하기